[handlers]: fix swagger annotations
