# docs/swagger.yaml
@@ -102,7 +102,7 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       summary: Delete an actor
       tags:
       - Actors
@@ -110,8 +110,12 @@ paths:
       consumes:
       - application/json
       description: Retrieves a list of actors
-      produces:
-      - application/json
+      parameters:
+      - description: Actor ID
+        in: path
+        name: id
+        required: true
+        type: integer
       responses:
         "200":
           description: Actors retrieved successfully
@@ -122,7 +126,7 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       summary: Get Actors
       tags:
       - Actors
@@ -153,7 +157,7 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       summary: Create Actor
       tags:
       - Actors
@@ -189,7 +193,7 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       summary: Update actor information
       tags:
       - Actors
@@ -199,7 +203,7 @@ paths:
       parameters:
       - description: Movie ID
         in: query
-        name: movie_id
+        name: id
         required: true
         type: string
       responses:
@@ -214,32 +218,8 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       summary: Delete Movie
-      tags:
-      - Movies
-    get:
-      description: Retrieves movies based on a filter.
-      parameters:
-      - description: Filter
-        in: query
-        name: filter
-        required: true
-        type: string
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.Movie'
-            type: array
-        "500":
-          description: Failed to get movies
-          schema:
-            type: string
-      security:
-      - jwt: []
-      summary: Get Movies by Filter
       tags:
       - Movies
     post:
@@ -265,7 +245,7 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       tags:
       - Movies
     put:
@@ -275,7 +255,7 @@ paths:
       parameters:
       - description: Movie ID
         in: query
-        name: movie_id
+        name: id
         required: true
         type: string
       - description: Movie object
@@ -298,7 +278,32 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
+      tags:
+      - Movies
+  /movies/filter:
+    get:
+      description: Retrieves movies based on a filter.
+      parameters:
+      - description: Filter
+        in: query
+        name: filter
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Movie'
+            type: array
+        "500":
+          description: Failed to get movies
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Get Movies by Filter
       tags:
       - Movies
   /movies/snippet:
@@ -322,7 +327,7 @@ paths:
           schema:
             type: string
       security:
-      - jwt: []
+      - ApiKeyAuth: []
       summary: Get Movies by Snippet
       tags:
       - Movies
@@ -356,10 +361,8 @@ paths:
       summary: Sign In
       tags:
       - Authentication
-security:
-- jwt: []
 securityDefinitions:
-  apiKey:
+  ApiKeyAuth:
     in: header
     name: Authorization
     type: apiKey
